# oppia-android

./: oppia-android.bazelproject  version.bzl
.github/: CODEOWNERS
.github/actions/set-up-android-bazel-build-environment/: action.yml
.github/workflows/: build_tests.yml  code_coverage.yml  comment_coverage_report.yml  developer_onboarding_notification.yml  issue_checks.yml  lesson_checks.yml  main.yml  oppiabot.yml  repository_messaging.yml  static_checks.yml  stats.yml  unit_tests.yml  wiki.yml
app/: BUILD.bazel
app/src/main/: AndroidManifest.xml
app/src/main/java/org/oppia/android/app/administratorcontrols/: AdministratorControlsActivity.kt  AdministratorControlsActivityPresenter.kt  AdministratorControlsFragmentPresenter.kt  LogoutDialogFragment.kt
app/src/main/java/org/oppia/android/app/application/: BUILD.bazel
app/src/main/java/org/oppia/android/app/classroom/: ClassroomListActivity.kt  ClassroomListActivityPresenter.kt  ClassroomListFragmentPresenter.kt  ClassroomListViewModel.kt
app/src/main/java/org/oppia/android/app/completedstorylist/: CompletedStoryListActivityPresenter.kt  CompletedStoryListFragmentPresenter.kt
app/src/main/java/org/oppia/android/app/customview/: ChapterNotStartedContainerConstraintLayout.kt  ContinueButtonView.kt  LessonThumbnailImageView.kt  PromotedStoryCardView.kt  SegmentedCircularProgressView.kt  VerticalDashedLineView.kt
app/src/main/java/org/oppia/android/app/databinding/: DrawableBindingAdapters.java  ImageViewBindingAdapters.java  TextViewBindingAdapters.java
app/src/main/java/org/oppia/android/app/devoptions/: DeveloperOptionsActivity.kt  DeveloperOptionsActivityPresenter.kt  DeveloperOptionsFragmentPresenter.kt
app/src/main/java/org/oppia/android/app/drawer/: ExitProfileDialogFragment.kt  NavigationDrawerFragmentPresenter.kt  NavigationDrawerHeaderViewModel.kt  NavigationDrawerItem.kt
app/src/main/java/org/oppia/android/app/help/: HelpActivity.kt  HelpActivityPresenter.kt  HelpFragmentPresenter.kt  HelpItemViewModel.kt  HelpListViewModel.kt
app/src/main/java/org/oppia/android/app/hintsandsolution/: HintsAndSolutionDialogFragment.kt  HintsAndSolutionDialogFragmentPresenter.kt  HintsAndSolutionViewModel.kt  RevealSolutionDialogFragment.kt  SolutionViewModel.kt
app/src/main/java/org/oppia/android/app/home/: HomeActivity.kt  HomeActivityPresenter.kt  HomeFragmentPresenter.kt  HomeViewModel.kt  WelcomeViewModel.kt
app/src/main/java/org/oppia/android/app/mydownloads/: DownloadsTabFragmentPresenter.kt  MyDownloadsActivityPresenter.kt  MyDownloadsFragmentPresenter.kt  UpdatesTabFragmentPresenter.kt
app/src/main/java/org/oppia/android/app/notice/: AutomaticAppDeprecationNoticeDialogFragmentPresenter.kt  BetaNoticeDialogFragmentPresenter.kt  ForcedAppDeprecationNoticeDialogFragmentPresenter.kt  GeneralAvailabilityUpgradeNoticeDialogFragmentPresenter.kt  OptionalAppDeprecationNoticeDialogFragmentPresenter.kt  OsDeprecationNoticeDialogFragmentPresenter.kt
app/src/main/java/org/oppia/android/app/onboarding/: AudioLanguageFragmentPresenter.kt  CreateProfileActivityPresenter.kt  CreateProfileFragmentPresenter.kt  IntroActivityPresenter.kt  IntroFragment.kt  IntroFragmentPresenter.kt  OnboadingSlideViewModel.kt  OnboardingActivityPresenter.kt  (+5 more)
app/src/main/java/org/oppia/android/app/shim/: BUILD.bazel  ViewBindingShimImpl.kt
app/src/main/java/org/oppia/android/app/spotlight/: BUILD.bazel  SpotlightFragment.kt
app/src/main/java/org/oppia/android/app/utility/math/: BUILD.bazel  MathExpressionAccessibilityUtil.kt
app/src/main/res/drawable/: ic_chevron_left.xml  ic_chevron_right.xml
app/src/main/res/layout/: profile_item.xml  profile_selection_fragment.xml
app/src/main/res/layout-land/: profile_item.xml  profile_selection_fragment.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-land/: dimens.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-sw/: strings.xml
app/src/main/res/values-sw600dp-land/: dimens.xml
app/src/sharedTest/java/org/oppia/android/app/databinding/: AppCompatCheckBoxBindingAdaptersTest.kt  BUILD.bazel  CircularProgressIndicatorAdaptersTest.kt  ColorBindingAdaptersTest.kt  DrawableBindingAdaptersTest.kt  ImageViewBindingAdaptersTest.kt  MarginBindingAdaptersTest.kt  StateAssemblerMarginBindingAdaptersTest.kt  StateAssemblerPaddingBindingAdaptersTest.kt  TextInputLayoutBindingAdaptersTest.kt  TextViewBindingAdaptersTest.kt  ViewBindingAdaptersTest.kt
data/: BUILD.bazel
data/src/main/java/org/oppia/android/data/backends/gae/testing/: BUILD.bazel  FeedbackReportingServiceTestOrchestrator.kt  NetworkConfigTestModule.kt  PlatformParameterServiceTestOrchestrator.kt
data/src/test/java/org/oppia/android/data/backends/gae/model/: BUILD.bazel  GaePlatformParameterValueTest.kt
data/src/test/java/org/oppia/android/data/backends/gae/testing/: BUILD.bazel  FeedbackReportingServiceTestOrchestratorTest.kt  NetworkConfigTestModuleTest.kt  PlatformParameterServiceTestOrchestratorTest.kt
domain/: BUILD.bazel
instrumentation/src/java/org/oppia/android/instrumentation/application/: EndToEndTestNetworkConfigModule.kt  TestApplicationComponent.kt
model/src/main/proto/: arguments.proto
scripts/assets/: accessibility_label_exemptions.textproto  file_content_validation_checks.textproto  test_file_exemptions.textproto
scripts/src/java/org/oppia/android/scripts/xml/: TextViewStyleCheck.kt
scripts/src/javatests/org/oppia/android/scripts/apkstats/: Aapt2ClientTest.kt  ApkAnalyzerClientTest.kt  BUILD.bazel  BundleToolClientTest.kt  ComputeAabDifferencesTest.kt
scripts/src/javatests/org/oppia/android/scripts/regex/: RegexPatternValidationCheckTest.kt
testing/: BUILD.bazel
wiki/: Bazel-User-Guide.md  Contributing-to-Oppia-Android.md  End-to-End-Testing-Guide.md  Gradle--Bazel-Migration-Best-Practices-and-FAQ.md  Installing-Oppia-Android.md  Oppia-Android-Code-Coverage.md  Oppia-Bazel-Setup-Instructions.md  Static-Analysis-Checks.md  Upgrading-Target-Sdk-Guide.md  _Sidebar.md
(+414 files in other folders)
