"""
Temporary shims for providing indirection in the Bazel build graph to unblock modularizing certain
parts of the app layer.
"""

load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "intent_factory_shim",
    srcs = [
        "IntentFactoryShim.kt",
    ],
    visibility = ["//app:app_visibility"],
    deps = [
        "//model/src/main/proto:profile_java_proto_lite",
        "//third_party:androidx_appcompat_appcompat",
    ],
)

kt_android_library(
    name = "view_binding_shim",
    srcs = [
        "ViewBindingShim.kt",
    ],
    visibility = ["//app:app_visibility"],
    deps = [
        "//app:view_models",
        "//utility/src/main/java/org/oppia/android/util/parser/html:html_parser",
    ],
)

kt_android_library(
    name = "impl",
    srcs = [
        "IntentFactoryShimImpl.kt",
        "ViewBindingShimImpl.kt",
    ],
    deps = [
        ":intent_factory_shim",
        ":view_binding_shim",
        "//app:databinding_resources",
        "//app/src/main/java/org/oppia/android/app/activity:activity_intent_factories_shim",
        "//utility",
    ],
)

kt_android_library(
    name = "prod_modules",
    srcs = [
        "IntentFactoryShimModule.kt",
        "ViewBindingShimModule.kt",
    ],
    visibility = ["//:oppia_prod_module_visibility"],
    deps = [
        ":impl",
        ":intent_factory_shim",
        ":view_binding_shim",
    ],
)
