"""
Constructs for setting up spotlights.
"""

load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")

exports_files(["SpotlightFragment.kt"])

kt_android_library(
    name = "spotlight",
    srcs = [
        "SpotlightManager.kt",
        "SpotlightNavigationListener.kt",
        "SpotlightShape.kt",
        "SpotlightTarget.kt",
    ],
    visibility = ["//app:app_visibility"],
    deps = ["//model/src/main/proto:spotlight_java_proto_lite"],
)
