"""
Tests for UI databinding utilities and adapters.
"""

load("//:oppia_android_test.bzl", "oppia_android_test")

oppia_android_test(
    name = "AppCompatCheckBoxBindingAdaptersTest",
    srcs = [
        "AppCompatCheckBoxBindingAdaptersTest.kt",
        "//app:data_binder_mapper_impl",
    ],
    custom_package = "org.oppia.android.app.test",
    enable_data_binding = True,
    test_class = "org.oppia.android.app.databinding.AppCompatCheckBoxBindingAdaptersTest",
    test_manifest = "//app:test_manifest",
    deps = [
        "//:dagger",
        "//app",
        "//app:test_deps",
        "//app/src/main/java/org/oppia/android/app/activity:activity_intent_factories_shim",
        "//app/src/main/java/org/oppia/android/app/application:application_component",
        "//app/src/main/java/org/oppia/android/app/application:application_injector",
        "//app/src/main/java/org/oppia/android/app/application:application_injector_provider",
        "//app/src/main/java/org/oppia/android/app/application:common_application_modules",
        "//app/src/main/java/org/oppia/android/app/application/testing:testing_build_flavor_module",
        "//app/src/main/java/org/oppia/android/app/translation/testing:test_module",
        "//domain",
        "//testing",
        "//testing/src/main/java/org/oppia/android/testing/junit:initialize_default_locale_rule",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//testing/src/main/java/org/oppia/android/testing/threading:test_module",
        "//testing/src/main/java/org/oppia/android/testing/time:test_module",
        "//third_party:androidx_test_ext_junit",
        "//third_party:androidx_test_ext_truth",
        "//third_party:junit_junit",
        "//third_party:org_robolectric_robolectric",
        "//third_party:robolectric_android-all",
        "//utility/src/main/java/org/oppia/android/util/accessibility:test_module",
        "//utility/src/main/java/org/oppia/android/util/caching/testing:caching_test_module",
        "//utility/src/main/java/org/oppia/android/util/data:data_providers",
        "//utility/src/main/java/org/oppia/android/util/logging:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:debug_module",
        "//utility/src/main/java/org/oppia/android/util/networking:debug_module",
    ],
)

oppia_android_test(
    name = "CircularProgressIndicatorAdaptersTest",
    srcs = [
        "CircularProgressIndicatorAdaptersTest.kt",
        "//app:data_binder_mapper_impl",
    ],
    custom_package = "org.oppia.android.app.test",
    enable_data_binding = True,
    test_class = "org.oppia.android.app.databinding.CircularProgressIndicatorAdaptersTest",
    test_manifest = "//app:test_manifest",
    deps = [
        "//:dagger",
        "//app",
        "//app:test_deps",
        "//app/src/main/java/org/oppia/android/app/activity:activity_intent_factories_shim",
        "//app/src/main/java/org/oppia/android/app/application:application_component",
        "//app/src/main/java/org/oppia/android/app/application:application_injector",
        "//app/src/main/java/org/oppia/android/app/application:application_injector_provider",
        "//app/src/main/java/org/oppia/android/app/application:common_application_modules",
        "//app/src/main/java/org/oppia/android/app/application/testing:testing_build_flavor_module",
        "//app/src/main/java/org/oppia/android/app/translation/testing:test_module",
        "//domain",
        "//testing",
        "//testing/src/main/java/org/oppia/android/testing/junit:initialize_default_locale_rule",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//testing/src/main/java/org/oppia/android/testing/threading:test_module",
        "//testing/src/main/java/org/oppia/android/testing/time:test_module",
        "//third_party:androidx_test_ext_junit",
        "//third_party:androidx_test_ext_truth",
        "//third_party:junit_junit",
        "//third_party:org_robolectric_robolectric",
        "//third_party:robolectric_android-all",
        "//utility/src/main/java/org/oppia/android/util/accessibility:test_module",
        "//utility/src/main/java/org/oppia/android/util/caching/testing:caching_test_module",
        "//utility/src/main/java/org/oppia/android/util/data:data_providers",
        "//utility/src/main/java/org/oppia/android/util/logging:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:debug_module",
        "//utility/src/main/java/org/oppia/android/util/networking:debug_module",
    ],
)

oppia_android_test(
    name = "DrawableBindingAdaptersTest",
    srcs = [
        "DrawableBindingAdaptersTest.kt",
        "//app:data_binder_mapper_impl",
    ],
    custom_package = "org.oppia.android.app.test",
    enable_data_binding = True,
    test_class = "org.oppia.android.app.databinding.DrawableBindingAdaptersTest",
    test_manifest = "//app:test_manifest",
    deps = [
        "//:dagger",
        "//app",
        "//app:test_deps",
        "//app/src/main/java/org/oppia/android/app/activity:activity_intent_factories_shim",
        "//app/src/main/java/org/oppia/android/app/application:application_component",
        "//app/src/main/java/org/oppia/android/app/application:application_injector",
        "//app/src/main/java/org/oppia/android/app/application:application_injector_provider",
        "//app/src/main/java/org/oppia/android/app/application:common_application_modules",
        "//app/src/main/java/org/oppia/android/app/application/testing:testing_build_flavor_module",
        "//app/src/main/java/org/oppia/android/app/translation/testing:test_module",
        "//domain",
        "//testing",
        "//testing/src/main/java/org/oppia/android/testing/junit:initialize_default_locale_rule",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//testing/src/main/java/org/oppia/android/testing/threading:test_module",
        "//testing/src/main/java/org/oppia/android/testing/time:test_module",
        "//third_party:androidx_test_ext_junit",
        "//third_party:androidx_test_ext_truth",
        "//third_party:junit_junit",
        "//third_party:org_robolectric_robolectric",
        "//third_party:robolectric_android-all",
        "//utility/src/main/java/org/oppia/android/util/accessibility:test_module",
        "//utility/src/main/java/org/oppia/android/util/caching/testing:caching_test_module",
        "//utility/src/main/java/org/oppia/android/util/data:data_providers",
        "//utility/src/main/java/org/oppia/android/util/logging:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:debug_module",
        "//utility/src/main/java/org/oppia/android/util/networking:debug_module",
    ],
)

oppia_android_test(
    name = "ImageViewBindingAdaptersTest",
    srcs = [
        "ImageViewBindingAdaptersTest.kt",
        "//app:data_binder_mapper_impl",
    ],
    custom_package = "org.oppia.android.app.test",
    enable_data_binding = True,
    test_class = "org.oppia.android.app.databinding.ImageViewBindingAdaptersTest",
    test_manifest = "//app:test_manifest",
    deps = [
        "//:dagger",
        "//app",
        "//app:test_deps",
        "//app/src/main/java/org/oppia/android/app/activity:activity_intent_factories_shim",
        "//app/src/main/java/org/oppia/android/app/application:application_component",
        "//app/src/main/java/org/oppia/android/app/application:application_injector",
        "//app/src/main/java/org/oppia/android/app/application:application_injector_provider",
        "//app/src/main/java/org/oppia/android/app/application:common_application_modules",
        "//app/src/main/java/org/oppia/android/app/application/testing:testing_build_flavor_module",
        "//app/src/main/java/org/oppia/android/app/translation/testing:test_module",
        "//domain",
        "//testing",
        "//testing/src/main/java/org/oppia/android/testing/junit:initialize_default_locale_rule",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//testing/src/main/java/org/oppia/android/testing/threading:test_module",
        "//testing/src/main/java/org/oppia/android/testing/time:test_module",
        "//third_party:androidx_test_ext_junit",
        "//third_party:androidx_test_ext_truth",
        "//third_party:junit_junit",
        "//third_party:org_robolectric_robolectric",
        "//third_party:robolectric_android-all",
        "//utility/src/main/java/org/oppia/android/util/accessibility:test_module",
        "//utility/src/main/java/org/oppia/android/util/caching/testing:caching_test_module",
        "//utility/src/main/java/org/oppia/android/util/data:data_providers",
        "//utility/src/main/java/org/oppia/android/util/logging:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:debug_module",
        "//utility/src/main/java/org/oppia/android/util/networking:debug_module",
    ],
)

oppia_android_test(
    name = "MarginBindingAdaptersTest",
    srcs = [
        "MarginBindingAdaptersTest.kt",
        "//app:data_binder_mapper_impl",
    ],
    custom_package = "org.oppia.android.app.test",
    enable_data_binding = True,
    test_class = "org.oppia.android.app.databinding.MarginBindingAdaptersTest",
    test_manifest = "//app:test_manifest",
    deps = [
        "//:dagger",
        "//app",
        "//app:test_deps",
        "//app/src/main/java/org/oppia/android/app/activity:activity_intent_factories_shim",
        "//app/src/main/java/org/oppia/android/app/application:application_component",
        "//app/src/main/java/org/oppia/android/app/application:application_injector",
        "//app/src/main/java/org/oppia/android/app/application:application_injector_provider",
        "//app/src/main/java/org/oppia/android/app/application:common_application_modules",
        "//app/src/main/java/org/oppia/android/app/application/testing:testing_build_flavor_module",
        "//app/src/main/java/org/oppia/android/app/translation/testing:test_module",
        "//domain",
        "//testing",
        "//testing/src/main/java/org/oppia/android/testing/junit:initialize_default_locale_rule",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//testing/src/main/java/org/oppia/android/testing/threading:test_module",
        "//testing/src/main/java/org/oppia/android/testing/time:test_module",
        "//third_party:androidx_test_ext_junit",
        "//third_party:androidx_test_ext_truth",
        "//third_party:junit_junit",
        "//third_party:org_robolectric_robolectric",
        "//third_party:robolectric_android-all",
        "//utility/src/main/java/org/oppia/android/util/accessibility:test_module",
        "//utility/src/main/java/org/oppia/android/util/caching/testing:caching_test_module",
        "//utility/src/main/java/org/oppia/android/util/data:data_providers",
        "//utility/src/main/java/org/oppia/android/util/logging:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:debug_module",
        "//utility/src/main/java/org/oppia/android/util/networking:debug_module",
    ],
)

oppia_android_test(
    name = "StateAssemblerMarginBindingAdaptersTest",
    srcs = [
        "StateAssemblerMarginBindingAdaptersTest.kt",
        "//app:data_binder_mapper_impl",
    ],
    custom_package = "org.oppia.android.app.test",
    enable_data_binding = True,
    test_class = "org.oppia.android.app.databinding.StateAssemblerMarginBindingAdaptersTest",
    test_manifest = "//app:test_manifest",
    deps = [
        "//:dagger",
        "//app",
        "//app:test_deps",
        "//app/src/main/java/org/oppia/android/app/activity:activity_intent_factories_shim",
        "//app/src/main/java/org/oppia/android/app/application:application_component",
        "//app/src/main/java/org/oppia/android/app/application:application_injector",
        "//app/src/main/java/org/oppia/android/app/application:application_injector_provider",
        "//app/src/main/java/org/oppia/android/app/application:common_application_modules",
        "//app/src/main/java/org/oppia/android/app/application/testing:testing_build_flavor_module",
        "//app/src/main/java/org/oppia/android/app/translation/testing:test_module",
        "//domain",
        "//testing",
        "//testing/src/main/java/org/oppia/android/testing/junit:initialize_default_locale_rule",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//testing/src/main/java/org/oppia/android/testing/threading:test_module",
        "//testing/src/main/java/org/oppia/android/testing/time:test_module",
        "//third_party:androidx_test_ext_junit",
        "//third_party:androidx_test_ext_truth",
        "//third_party:junit_junit",
        "//third_party:org_robolectric_robolectric",
        "//third_party:robolectric_android-all",
        "//utility/src/main/java/org/oppia/android/util/accessibility:test_module",
        "//utility/src/main/java/org/oppia/android/util/caching/testing:caching_test_module",
        "//utility/src/main/java/org/oppia/android/util/data:data_providers",
        "//utility/src/main/java/org/oppia/android/util/logging:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:debug_module",
        "//utility/src/main/java/org/oppia/android/util/networking:debug_module",
    ],
)

oppia_android_test(
    name = "StateAssemblerPaddingBindingAdaptersTest",
    srcs = [
        "StateAssemblerPaddingBindingAdaptersTest.kt",
        "//app:data_binder_mapper_impl",
    ],
    custom_package = "org.oppia.android.app.test",
    enable_data_binding = True,
    test_class = "org.oppia.android.app.databinding.StateAssemblerPaddingBindingAdaptersTest",
    test_manifest = "//app:test_manifest",
    deps = [
        "//:dagger",
        "//app",
        "//app:test_deps",
        "//app/src/main/java/org/oppia/android/app/activity:activity_intent_factories_shim",
        "//app/src/main/java/org/oppia/android/app/application:application_component",
        "//app/src/main/java/org/oppia/android/app/application:application_injector",
        "//app/src/main/java/org/oppia/android/app/application:application_injector_provider",
        "//app/src/main/java/org/oppia/android/app/application:common_application_modules",
        "//app/src/main/java/org/oppia/android/app/application/testing:testing_build_flavor_module",
        "//app/src/main/java/org/oppia/android/app/translation/testing:test_module",
        "//domain",
        "//testing",
        "//testing/src/main/java/org/oppia/android/testing/junit:initialize_default_locale_rule",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//testing/src/main/java/org/oppia/android/testing/threading:test_module",
        "//testing/src/main/java/org/oppia/android/testing/time:test_module",
        "//third_party:androidx_test_ext_junit",
        "//third_party:androidx_test_ext_truth",
        "//third_party:junit_junit",
        "//third_party:org_robolectric_robolectric",
        "//third_party:robolectric_android-all",
        "//utility/src/main/java/org/oppia/android/util/accessibility:test_module",
        "//utility/src/main/java/org/oppia/android/util/caching/testing:caching_test_module",
        "//utility/src/main/java/org/oppia/android/util/data:data_providers",
        "//utility/src/main/java/org/oppia/android/util/logging:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:debug_module",
        "//utility/src/main/java/org/oppia/android/util/networking:debug_module",
    ],
)

oppia_android_test(
    name = "TextInputLayoutBindingAdaptersTest",
    srcs = [
        "TextInputLayoutBindingAdaptersTest.kt",
        "//app:data_binder_mapper_impl",
    ],
    custom_package = "org.oppia.android.app.test",
    enable_data_binding = True,
    test_class = "org.oppia.android.app.databinding.TextInputLayoutBindingAdaptersTest",
    test_manifest = "//app:test_manifest",
    deps = [
        "//:dagger",
        "//app:test_deps",
        "//app/src/main/java/org/oppia/android/app/application:application_component",
        "//app/src/main/java/org/oppia/android/app/application:application_injector",
        "//app/src/main/java/org/oppia/android/app/application:application_injector_provider",
        "//app/src/main/java/org/oppia/android/app/application:common_application_modules",
        "//app/src/main/java/org/oppia/android/app/application/testing:testing_build_flavor_module",
        "//app/src/main/java/org/oppia/android/app/translation/testing:test_module",
        "//testing/src/main/java/org/oppia/android/testing/espresso:edit_text_input_action",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//testing/src/main/java/org/oppia/android/testing/threading:test_module",
        "//testing/src/main/java/org/oppia/android/testing/time:test_module",
        "//third_party:androidx_test_ext_junit",
        "//third_party:junit_junit",
        "//third_party:org_robolectric_robolectric",
        "//third_party:robolectric_android-all",
        "//utility/src/main/java/org/oppia/android/util/accessibility:test_module",
        "//utility/src/main/java/org/oppia/android/util/caching/testing:caching_test_module",
        "//utility/src/main/java/org/oppia/android/util/logging:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:debug_module",
        "//utility/src/main/java/org/oppia/android/util/networking:debug_module",
    ],
)

oppia_android_test(
    name = "TextViewBindingAdaptersTest",
    srcs = [
        "TextViewBindingAdaptersTest.kt",
        "//app:data_binder_mapper_impl",
    ],
    custom_package = "org.oppia.android.app.test",
    enable_data_binding = True,
    test_class = "org.oppia.android.app.databinding.TextViewBindingAdaptersTest",
    test_manifest = "//app:test_manifest",
    deps = [
        "//:dagger",
        "//app",
        "//app:test_deps",
        "//app/src/main/java/org/oppia/android/app/activity:activity_intent_factories_shim",
        "//app/src/main/java/org/oppia/android/app/application:application_component",
        "//app/src/main/java/org/oppia/android/app/application:application_injector",
        "//app/src/main/java/org/oppia/android/app/application:application_injector_provider",
        "//app/src/main/java/org/oppia/android/app/application:common_application_modules",
        "//app/src/main/java/org/oppia/android/app/application/testing:testing_build_flavor_module",
        "//app/src/main/java/org/oppia/android/app/translation/testing:test_module",
        "//domain",
        "//testing",
        "//testing/src/main/java/org/oppia/android/testing/junit:initialize_default_locale_rule",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//testing/src/main/java/org/oppia/android/testing/threading:test_module",
        "//testing/src/main/java/org/oppia/android/testing/time:test_module",
        "//third_party:androidx_test_ext_junit",
        "//third_party:androidx_test_ext_truth",
        "//third_party:junit_junit",
        "//third_party:org_robolectric_robolectric",
        "//third_party:robolectric_android-all",
        "//utility/src/main/java/org/oppia/android/util/accessibility:test_module",
        "//utility/src/main/java/org/oppia/android/util/caching/testing:caching_test_module",
        "//utility/src/main/java/org/oppia/android/util/data:data_providers",
        "//utility/src/main/java/org/oppia/android/util/logging:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:debug_module",
        "//utility/src/main/java/org/oppia/android/util/networking:debug_module",
    ],
)

oppia_android_test(
    name = "ViewBindingAdaptersTest",
    srcs = [
        "ViewBindingAdaptersTest.kt",
        "//app:data_binder_mapper_impl",
    ],
    custom_package = "org.oppia.android.app.test",
    enable_data_binding = True,
    test_class = "org.oppia.android.app.databinding.ViewBindingAdaptersTest",
    test_manifest = "//app:test_manifest",
    deps = [
        "//:dagger",
        "//app",
        "//app:test_deps",
        "//app/src/main/java/org/oppia/android/app/activity:activity_intent_factories_shim",
        "//app/src/main/java/org/oppia/android/app/application:application_component",
        "//app/src/main/java/org/oppia/android/app/application:application_injector",
        "//app/src/main/java/org/oppia/android/app/application:application_injector_provider",
        "//app/src/main/java/org/oppia/android/app/application:common_application_modules",
        "//app/src/main/java/org/oppia/android/app/application/testing:testing_build_flavor_module",
        "//app/src/main/java/org/oppia/android/app/translation/testing:test_module",
        "//domain",
        "//testing",
        "//testing/src/main/java/org/oppia/android/testing/junit:initialize_default_locale_rule",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//testing/src/main/java/org/oppia/android/testing/threading:test_module",
        "//testing/src/main/java/org/oppia/android/testing/time:test_module",
        "//third_party:androidx_test_ext_junit",
        "//third_party:androidx_test_ext_truth",
        "//third_party:junit_junit",
        "//third_party:org_robolectric_robolectric",
        "//third_party:robolectric_android-all",
        "//utility/src/main/java/org/oppia/android/util/accessibility:test_module",
        "//utility/src/main/java/org/oppia/android/util/caching/testing:caching_test_module",
        "//utility/src/main/java/org/oppia/android/util/data:data_providers",
        "//utility/src/main/java/org/oppia/android/util/logging:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:debug_module",
        "//utility/src/main/java/org/oppia/android/util/networking:debug_module",
    ],
)

oppia_android_test(
    name = "ColorBindingAdaptersTest",
    srcs = [
        "ColorBindingAdaptersTest.kt",
        "//app:data_binder_mapper_impl",
    ],
    custom_package = "org.oppia.android.app.test",
    enable_data_binding = True,
    test_class = "org.oppia.android.app.databinding.ColorBindingAdaptersTest",
    test_manifest = "//app:test_manifest",
    deps = [
        "//:dagger",
        "//app",
        "//app:test_deps",
        "//app/src/main/java/org/oppia/android/app/activity:activity_intent_factories_shim",
        "//app/src/main/java/org/oppia/android/app/application:application_component",
        "//app/src/main/java/org/oppia/android/app/application:application_injector",
        "//app/src/main/java/org/oppia/android/app/application:application_injector_provider",
        "//app/src/main/java/org/oppia/android/app/application:common_application_modules",
        "//app/src/main/java/org/oppia/android/app/application/testing:testing_build_flavor_module",
        "//app/src/main/java/org/oppia/android/app/translation/testing:test_module",
        "//domain",
        "//testing",
        "//testing/src/main/java/org/oppia/android/testing/junit:initialize_default_locale_rule",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//testing/src/main/java/org/oppia/android/testing/threading:test_module",
        "//testing/src/main/java/org/oppia/android/testing/time:test_module",
        "//third_party:androidx_test_ext_junit",
        "//third_party:androidx_test_ext_truth",
        "//third_party:junit_junit",
        "//third_party:org_robolectric_robolectric",
        "//third_party:robolectric_android-all",
        "//utility/src/main/java/org/oppia/android/util/accessibility:test_module",
        "//utility/src/main/java/org/oppia/android/util/caching/testing:caching_test_module",
        "//utility/src/main/java/org/oppia/android/util/data:data_providers",
        "//utility/src/main/java/org/oppia/android/util/logging:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:debug_module",
        "//utility/src/main/java/org/oppia/android/util/networking:debug_module",
    ],
)
