"""
General purposes utilities corresponding to displaying math expressions & constructs.
"""

load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "math_expression_accessibility_util",
    srcs = ["MathExpressionAccessibilityUtil.kt"],
    visibility = ["//app:app_visibility"],
    deps = [
        "//app:resources",
        "//app/src/main/java/org/oppia/android/app/translation:app_language_resource_handler",
        "//model/src/main/proto:languages_java_proto_lite",
        "//model/src/main/proto:math_java_proto_lite",
        "//utility/src/main/java/org/oppia/android/util/math:extensions",
    ],
)
